@@ -26,6 +26,8 @@ class ParallelFsfSolver(FSFSolver):
                  kernel=None,
                  integrator=None,
                  time_step=0.0,
+                 enable_timing=False,
+                 timing_output_file='',
                  total_simulation_time=0.0,
                  max_fluid_density_variation=0.01,
                  *args, **kwargs):
@@ -63,6 +65,8 @@ class ParallelFsfSolver(FSFSolver):
                            integrator=integrator,
                            time_step=time_step,
                            total_simulation_time=total_simulation_time,
+                           enable_timing=enable_timing,
+                           timing_output_file=timing_output_file,
                            max_fluid_density_variation=max_fluid_density_variation)
 
         self.parallel_controller = parallel_controller
